--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "npm": ">= 5.0.0"
   },
   "dependencies": {
+    "@ensdomains/address-encoder": "0.1.2",
     "@hot-loader/react-dom": "16.8.6",
     "@ledgerhq/hw-app-eth": "4.48.0",
     "@ledgerhq/hw-transport-node-hid-noevents": "4.48.0",
@@ -17,7 +18,7 @@
     "@ledgerhq/hw-transport-webusb": "4.56.0",
     "@mycrypto/eth-scan": "https://github.com/MyCryptoHQ/eth-scan.git#6fac6550624b126adfdf4407ca65145f54d03e9c",
     "@parity/qr-signer": "0.3.1",
-    "@unstoppabledomains/resolution": "1.3.6",
+    "@unstoppabledomains/resolution": "1.20.0",
     "axios": "0.18.1",
     "babel-polyfill": "6.26.0",
     "bip39": "2.5.0",
@@ -29,7 +30,7 @@
     "ethereumjs-abi": "git://github.com/ethereumjs/ethereumjs-abi.git#09c3c48fd3bed143df7fa8f36f6f164205e23796",
     "ethereumjs-tx": "1.3.4",
     "ethereumjs-util": "5.1.5",
-    "ethereumjs-wallet": "0.6.0",
+    "ethereumjs-wallet": "0.6.5",
     "font-awesome": "4.7.0",
     "formik": "1.3.2",
     "hdkey": "0.8.0",
@@ -113,6 +114,7 @@
     "autodll-webpack-plugin": "0.3.9",
     "aws-sdk": "2.424.0",
     "babel-loader": "8.0.6",
+    "bufferutil": "^4.0.5",
     "check-node-version": "3.2.0",
     "concurrently": "4.1.0",
     "copy-webpack-plugin": "4.5.1",
@@ -139,7 +141,7 @@
     "mini-css-extract-plugin": "0.4.0",
     "minimist": "1.2.0",
     "mycrypto-nano-result": "0.0.1",
-    "node-sass": "4.8.3",
+    "node-sass": "4.12.0",
     "nodemon": "1.17.3",
     "null-loader": "0.1.1",
     "prettier": "1.18.2",
@@ -151,7 +153,7 @@
     "sass-loader": "6.0.7",
     "style-loader": "0.20.3",
     "thread-loader": "1.1.5",
-    "ts-jest": "22.0.3",
+    "ts-jest": "23.10.5",
     "ts-loader": "4.1.0",
     "ts-node": "5.0.1",
     "tslint": "5.17.0",
@@ -163,10 +165,11 @@
     "u2f-api": "1.0.6",
     "uglifyjs-webpack-plugin": "1.2.4",
     "url-search-params-polyfill": "3.0.0",
+    "utf-8-validate": "^5.0.7",
     "webapp-webpack-plugin": "2.7.1",
     "webpack": "4.41.0",
     "webpack-cli": "3.3.9",
-    "webpack-dev-server": "3.8.2",
+    "webpack-dev-server": "3.11.2",
     "webpack-merge": "4.2.1",
     "webpack-sources": "1.1.0",
     "webpack-subresource-integrity": "1.3.4",
