--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "zxcvbn": "4.4.2"
   },
   "devDependencies": {
+    "optipng-bin": "6.0.0",
     "@babel/core": "7.6.4",
     "@babel/plugin-proposal-class-properties": "7.5.5",
     "@babel/plugin-proposal-object-rest-spread": "7.6.2",
@@ -94,6 +95,7 @@
     "@types/jest": "22.2.3",
     "@types/lodash": "4.14.107",
     "@types/moment-timezone": "0.5.4",
+    "@types/node": "12.20.20",
     "@types/node-hid": "0.7.0",
     "@types/qrcode": "0.8.0",
     "@types/qrcode.react": "0.6.3",
@@ -123,7 +125,7 @@
     "cross-env": "5.2.0",
     "css-loader": "0.28.11",
     "electron": "2.0.8",
-    "electron-builder": "20.13.4",
+    "electron-builder": "20.13.5",
     "empty": "0.10.1",
     "enzyme": "3.3.0",
     "enzyme-adapter-react-16": "1.1.1",
@@ -133,7 +135,7 @@
     "hard-source-webpack-plugin": "0.13.1",
     "html-webpack-plugin": "3.0.6",
     "husky": "3.0.8",
-    "image-webpack-loader": "4.2.0",
+    "image-webpack-loader": "6.0.0",
     "isomorphic-fetch": "2.2.1",
     "jest": "22.1.4",
     "klaw-sync": "3.0.2",
