--- a/package.json
+++ b/package.json
@@ -68,9 +68,9 @@
     "rskjs-util": "1.0.3",
     "scryptsy": "2.0.0",
     "semver": "5.5.0",
-    "trezor-connect": "8.1.13",
-    "trezor-link": "https://github.com/MyCryptoHQ/trezor-link#176c94f",
-    "trezor.js": "9.2.3",
+    "trezor-connect": "8.2.4",
+    "trezor-link": "https://github.com/3nprob/trezor-link#8c8f86f58ef88758e1761627956cb7a96a3ff0a1",
+    "trezor.js": "9.3.4",
     "uuid": "3.2.1",
     "wallet-address-validator": "0.2.4",
     "whatwg-fetch": "2.0.3",
